--- a/index.html
+++ b/index.html
@@ -128,11 +128,17 @@
 
     html,
     body {
-      height: 100%;
       margin: 0;
       font-family: ui-sans-serif, system-ui, -apple-system, "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", sans-serif;
       line-height: 1.6;
       color: var(--text);
+      height: auto;
+      overflow-y: auto;
+      scroll-behavior: smooth;
+    }
+
+    html {
+      background-color: rgba(59, 130, 246, .12);
     }
 
     body {
@@ -141,10 +147,14 @@
         radial-gradient(550px 550px at 90% 0%, rgba(59, 130, 246, .12), transparent 60%),
         linear-gradient(135deg, var(--bg1) 0%, var(--bg2) 45%, var(--bg3) 100%);
       background-attachment: fixed;
+    }
+
+    .layout {
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 32px 16px 48px;
+      min-height: 100vh;
+      min-height: 100dvh;
     }
 
     .shell {
@@ -158,6 +168,7 @@
       box-shadow: 0 20px 50px rgba(15, 23, 42, .08);
 
       padding: 32px 36px 30px;
+      margin: 32px 12px;
       text-align: center;
     }
 
@@ -299,6 +310,17 @@
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     }
 
+    .subtitle {
+      font-size: 17px;
+      color: #445066;
+      font-weight: 500;
+      letter-spacing: 0.01em;
+      animation: fadeIn 0.8s ease forwards;
+      opacity: 0;
+      margin: 30px auto 6px;
+      word-break: keep-all;
+    }
+
     @media (max-width: 520px) {
       .shell {
         padding: 22px 18px 26px;
@@ -311,18 +333,12 @@
       .btn {
         justify-content: center;
       }
+
+      .subtitle {
+        max-width: 200px;
+      }
     }
 
-    .subtitle {
-      font-size: 17px;
-      color: #445066;
-      margin: 10px 0 6px;
-      font-weight: 500;
-      letter-spacing: 0.01em;
-      animation: fadeIn 0.8s ease forwards;
-      opacity: 0;
-      margin-top: 30px;
-    }
 
     @keyframes fadeIn {
       from {
@@ -339,61 +355,63 @@
 </head>
 
 <body>
-  <main class="shell" aria-label="jihoon 소개">
-    <div>
-      <span class="badge">jihoon · software / writing</span>
-    </div>
-    <img class="avatar" src="profile.jpg" alt="eschocolat" />
-    <p class="subtitle">
-      몰입하여 더욱 가치 있게 만들기를 좋아하는 사람.
-    </p>
-    <h1 class="title">안녕하세요, <span class="brand-color">Eschocolat</span> 입니다.</h1>
-    <p class="sub">
-      소프트웨어 엔지니어입니다. Typescript로 만들고, 글로 정리합니다.
-      이 페이지는 저를 간단히 소개하고, 블로그, 개인 링크 등 여러 페이지로 연결해줍니다.
-    </p>
-
-    <div class="icons" aria-label="Social links">
-      <a class="icon-btn" href="https://x.com/_eschocolat" target="_blank" rel="noreferrer" aria-label="X">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
-          <path d="M18 2h3l-7 8 8 10h-6l-5-6-6 6H2l7-8L2 2h6l5 6 5-6Z" fill="currentColor" />
-        </svg>
-      </a>
-      <a class="icon-btn" href="https://www.linkedin.com/in/eschocolat/" target="_blank" rel="noreferrer"
-        aria-label="LinkedIn">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
-          <path d="M4.98 3.5A2.5 2.5 0 1 1 5 8.5a2.5 2.5 0 0 1-.02-5Z" fill="currentColor" />
-          <path
-            d="M3 9h4v12H3zM10 9h4v2.4h.06c.56-1.06 1.94-2.4 3.99-2.4 4.27 0 5.06 2.8 5.06 6.44V21h-4v-5.1c0-1.22-.02-2.79-1.7-2.79-1.7 0-1.96 1.33-1.96 2.7V21h-4z"
-            fill="currentColor" />
-        </svg>
-      </a>
-      <a class="icon-btn" href="https://github.com/eschocolat" target="_blank" rel="noreferrer" aria-label="GitHub">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
-          <path
-            d="M12 .5a11.5 11.5 0 0 0-3.64 22.41c.58.1.8-.25.8-.57V20.3c-3.26.7-3.95-1.57-3.95-1.57-.53-1.34-1.3-1.7-1.3-1.7-1.07-.73.08-.72.08-.72 1.18.08 1.8 1.21 1.8 1.21 1.05 1.8 2.76 1.28 3.43.98.1-.77.41-1.28.75-1.57-2.6-.3-5.33-1.3-5.33-5.78 0-1.28.46-2.32 1.2-3.14-.12-.3-.52-1.5.12-3.12 0 0 .98-.31 3.2 1.2.94-.26 1.95-.4 2.96-.4s2.02.14 2.96.4c2.21-1.51 3.19-1.2 3.19-1.2.64 1.62.24 2.82.12 3.12.75.82 1.2 1.86 1.2 3.14 0 4.49-2.73 5.47-5.34 5.77.42.36.8 1.07.8 2.16v3.2c0 .32.21.67.81.56A11.5 11.5 0 0 0 12 .5Z"
-            fill="currentColor" />
-        </svg>
-      </a>
-    </div>
-
-    <div class="cta">
-      <a class="btn primary" href="https://blog.eschocolat.dev" target="_blank" rel="noreferrer">블로그로 가기 (Ghost) ↗</a>
-      <a class="btn" href="https://blog.eschocolat.dev/now" target="_blank" rel="noreferrer">Now 페이지 ↗</a>
-    </div>
-
-    <div class="cta" style="margin-top:20px">
-      <a class="btn" href="mailto:eschocolat.lee@gmail.com">이메일 보내기</a>
-    </div>
-
-    <footer>
-      <div class="mono">© <span id="year"></span> jihoon · <a
-          href="mailto:eschocolat.lee@gmail.com">eschocolat.lee@gmail.com</a>
+  <div class="layout">
+    <main class="shell" aria-label="jihoon 소개">
+      <div>
+        <span class="badge">jihoon · software / writing</span>
       </div>
-      <div><a href="https://blog.eschocolat.dev" target="_blank">Blog</a> · <a href="https://blog.eschocolat.dev/now"
-          target="_blank">Now</a></div>
-    </footer>
-  </main>
+      <img class="avatar" src="profile.jpg" alt="eschocolat" />
+      <p class="subtitle">
+        몰입하여 더욱 가치 있게 만들기를 좋아하는 사람.
+      </p>
+      <h1 class="title">안녕하세요, <span class="brand-color">Eschocolat</span> 입니다.</h1>
+      <p class="sub">
+        소프트웨어 엔지니어입니다. Typescript로 만들고, 글로 정리합니다.
+        이 페이지는 저를 간단히 소개하고, 블로그, 개인 링크 등 여러 페이지로 연결해줍니다.
+      </p>
+
+      <div class="icons" aria-label="Social links">
+        <a class="icon-btn" href="https://x.com/_eschocolat" target="_blank" rel="noreferrer" aria-label="X">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
+            <path d="M18 2h3l-7 8 8 10h-6l-5-6-6 6H2l7-8L2 2h6l5 6 5-6Z" fill="currentColor" />
+          </svg>
+        </a>
+        <a class="icon-btn" href="https://www.linkedin.com/in/eschocolat/" target="_blank" rel="noreferrer"
+          aria-label="LinkedIn">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
+            <path d="M4.98 3.5A2.5 2.5 0 1 1 5 8.5a2.5 2.5 0 0 1-.02-5Z" fill="currentColor" />
+            <path
+              d="M3 9h4v12H3zM10 9h4v2.4h.06c.56-1.06 1.94-2.4 3.99-2.4 4.27 0 5.06 2.8 5.06 6.44V21h-4v-5.1c0-1.22-.02-2.79-1.7-2.79-1.7 0-1.96 1.33-1.96 2.7V21h-4z"
+              fill="currentColor" />
+          </svg>
+        </a>
+        <a class="icon-btn" href="https://github.com/eschocolat" target="_blank" rel="noreferrer" aria-label="GitHub">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
+            <path
+              d="M12 .5a11.5 11.5 0 0 0-3.64 22.41c.58.1.8-.25.8-.57V20.3c-3.26.7-3.95-1.57-3.95-1.57-.53-1.34-1.3-1.7-1.3-1.7-1.07-.73.08-.72.08-.72 1.18.08 1.8 1.21 1.8 1.21 1.05 1.8 2.76 1.28 3.43.98.1-.77.41-1.28.75-1.57-2.6-.3-5.33-1.3-5.33-5.78 0-1.28.46-2.32 1.2-3.14-.12-.3-.52-1.5.12-3.12 0 0 .98-.31 3.2 1.2.94-.26 1.95-.4 2.96-.4s2.02.14 2.96.4c2.21-1.51 3.19-1.2 3.19-1.2.64 1.62.24 2.82.12 3.12.75.82 1.2 1.86 1.2 3.14 0 4.49-2.73 5.47-5.34 5.77.42.36.8 1.07.8 2.16v3.2c0 .32.21.67.81.56A11.5 11.5 0 0 0 12 .5Z"
+              fill="currentColor" />
+          </svg>
+        </a>
+      </div>
+
+      <div class="cta">
+        <a class="btn primary" href="https://blog.eschocolat.dev" target="_blank" rel="noreferrer">블로그로 가기 (Ghost) ↗</a>
+        <a class="btn" href="https://blog.eschocolat.dev/now" target="_blank" rel="noreferrer">Now 페이지 ↗</a>
+      </div>
+
+      <div class="cta" style="margin-top:20px">
+        <a class="btn" href="mailto:eschocolat.lee@gmail.com">이메일 보내기</a>
+      </div>
+
+      <footer>
+        <div class="mono">© <span id="year"></span> jihoon · <a
+            href="mailto:eschocolat.lee@gmail.com">eschocolat.lee@gmail.com</a>
+        </div>
+        <div><a href="https://blog.eschocolat.dev" target="_blank">Blog</a> · <a href="https://blog.eschocolat.dev/now"
+            target="_blank">Now</a></div>
+      </footer>
+    </main>
+  </div>
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
